[package]
authors = ["Xavier Bestel <xavier.bestel@free.fr>"]
description = "Console printer for CommonMark"
license = "GPL-3.0"
name = "catmark"
repository = "https://github.com/bestouff/catmark"
version = "0.2.0"

[dependencies]
ansi_term = "0.10.2"
pulldown-cmark = "0.1.0"
syntect = "1.8.0"
term_size = "0.3.0"
unicode-segmentation = "1.2.0"
unicode-width = "0.1.4"
