[package]
authors = ["Xavier Bestel <xavier.bestel@free.fr>"]
description = "Console printer for CommonMark"
license = "GPL-3.0"
name = "catmark"
repository = "https://github.com/bestouff/catmark"
version = "0.2.1"

[[bin]]
name = "catmark"
path = "src/main.rs"

[dependencies]
ansi_term = "0.10.2"
pulldown-cmark = "0.1.0"
syntect = "1.8.0"
term_size = "0.3.0"
unicode-segmentation = "1.1.0"
unicode-width = "0.1.4"

[dependencies.html2runes]
git = "https://github.com/Ruin0x11/html2runes"

[lib]
path = "src/lib.rs"
